# LibraryOfBabel

./: AGENTS.md  README.md  pyproject.toml
.github/agents/: agent.md
.github/workflows/: ci.yml
.junie/: guidelines.md
babel/: pyproject.toml
babel/tests/: test_cli_smoke.py  test_determinism.py  test_fixed_sentence_generator.py  test_logmath.py  test_metrics.py  test_no_adjacent_punctuation.py  test_punctuation_constrained.py  test_setup_vocab_cli.py  test_unrestricted_generator.py  test_vocabulary_discovery.py  test_vocabulary_downloader.py  test_vocabulary_manifest.py
babel_poc/: AGENTS.md  README.md
babel_poc/data/: README.md
babel_poc/tests/: test_cli_smoke.py  test_determinism.py  test_fixed_sentence_generator.py  test_logmath.py  test_metrics.py  test_no_adjacent_punctuation.py  test_setup_vocab_cli.py  test_unrestricted_generator.py  test_vocabulary_discovery.py  test_vocabulary_downloader.py  test_vocabulary_loader.py  test_vocabulary_manifest.py
data/: README.md
docs/: Semantic_Models_of_Library_of_Babel.md  Semantic_Models_of_Library_of_Babel_teaser.md  math-model.md
docs/agent/: uv_migration_notes.md  verification_report.md
docs/models/: README.md  stage-0-english-borges.md  stage-1-lexical.md  stage-2-punctuation.md  stage-3-sentence-structured.md  stage-4-grammar.md  stage-6-topic.md  (+1 more)
tests/: conftest.py  test_cli_smoke.py  test_determinism.py  test_punctuation_constrained.py  test_sentence_structured.py  test_vocabulary_discovery.py  test_vocabulary_downloader.py  test_vocabulary_loader.py  test_word_based.py
tools/: md_math_flavor.py
(+114 files in other folders)
