[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "library-of-babel"
version = "0.1.0"
description = "Local Python PoC for Progressive Library of Babel Reduction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "pydantic>=2.0",
  "numpy>=1.26",
  "scipy>=1.12",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
library-of-babel = "babel.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/babel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
